# hackathon-warmup

./: README.md  pyproject.toml
hack/: README.md
notebooks/: README.md
scripts/: README.md
utils/: README.md
